--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+Please see README.win32 for Windows-specific info.
 Please see the LICENSE file for details on copying and usage.
 Please refer to the INSTALL file for instructions on how to build.
 
